# shopsystem-messaging

./: .gitignore  CLAUDE.md  README.md  compose.yml  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.devcontainer/: devcontainer.json
features/: abstract_address_registry_adr020.feature  bc_side_bead_creation_on_inbox_observation.feature  bc_status_live_watch_online_end_to_end.feature  bd_integration_atomicity_field_mapping.feature  catalog_schema_bd_decoupling.feature  clarify_response_in_band_answer.feature  completion_lookup_and_incremental_snapshot.feature  consume_inbox.feature  consume_outbox.feature  consume_outbox_completion_journal_response.feature  consume_releases_lead_inbox_slot.feature  cwd_implicit_shop_resolution.feature  dispatch_dependencies_bd_dep.feature  dispatch_dependency_bd_native_status_closed.feature  dispatch_dependency_live_bd_dep_at_send.feature  journal_rebuild_from_committed_features_tree.feature  nudge_message_type.feature  orphan_completion_anomaly.feature  outbox_notify_and_watch_lead_root.feature  pending_and_read_inbox.feature  pending_outbox_all_message_types.feature  presence_heartbeat_in_watch.feature  prime_lead.feature  prime_orients_unconditionally_slug_fallback.feature  read_outbox.feature  registry_no_shop_root_existence_check_adr018.feature  release_workflow_no_bc_launcher_dispatch_emit.feature  release_workflow_repository_dispatch_to_bc_launcher.feature  removed_flags_migration_error.feature  request_completion_journal.feature  request_scenario_register.feature  respond_clarify.feature  (+33 more)
tests/: conftest.py  (+18 more)
(+15 files in other folders)
